[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/lobby.gd" id="1_8v8jv"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8v8jv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"
size_flags_horizontal = 4
size_flags_vertical = 4
custom_minimum_size = Vector2(200, 50)

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
size_flags_horizontal = 4
size_flags_vertical = 4
custom_minimum_size = Vector2(200, 50)

[node name="IPAddress" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP Address"
size_flags_horizontal = 4
size_flags_vertical = 4
custom_minimum_size = Vector2(200, 40)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
size_flags_horizontal = 4
size_flags_vertical = 4
custom_minimum_size = Vector2(300, 40)
text = "Ready to connect"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Menu"
size_flags_horizontal = 4
size_flags_vertical = 4
custom_minimum_size = Vector2(200, 50)